change style of index.html and style.css

--- a/style/indexstyle.css
+++ b/style/indexstyle.css
@@ -92,7 +92,7 @@ h6 span{
   height: 36px;
   border-radius: 50%;
   color: #ffeba7;
-  background-color: #102770;
+  background-color: #bd17a1;
   font-family: 'unicons';
   content: '';
   z-index: 20;
